--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "jwt-decode": "^3.0.0",
+    "moment": "^2.29.1",
     "query-string": "^6.13.5",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.28.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-kakao-login": "^1.2.3",
